fixing gap between app and nav in firefox

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -46,8 +46,7 @@ body,html{
 
 .main-section, .app-section{ 
 	height: auto;
-	margin-top: 45px;
-	margin-top: 2.8125rem;
+	padding-top: 1.4em;
 }
 
 .off-canvas-wrap, .inner-wrap {
